@@ -5,6 +5,7 @@
   (#58933) 
 - add display_driver_helper script (used by XFdrake, udev, drakx, dkms)
 - add/remove nokmsboot boot option as needed
+- ask for reboot instead of X server restart, as it is commonly needed
 
 Version 0.90 - 26 May 2010
 
